--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
                             <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                         </div>
                         <div>
-                            <p class="h4 mt-4 mb-4 text-truncate">text-truncate bootstrap class use kore <br> 3 dot anben</p>
+                            <p class="h4 mt-4 mb-4">text-truncate bootstrap class use kore <br> 3 dot anben</p>
                         </div>
-                        <p class="mt-5 text-truncate">Pi aelerea ilei esl cuesdarm ies quas ex LoTun Pi aelerea ktldkrjt gniuyu</span>
+                        <p class="text-truncate">Pi aelerea ilei esl cuesdarm ies quas ex LoTun Pi aelerea ktldkrjt gniuyu</span>
                         <div class="alert alert-danger mt-5 py-3" role="alert">
                             A simple danger alert—check it out!
                         </div>
